move inlang message format plugin to packages

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - 'packages/*'
   - 'packages/inlang/*'
+  - 'packages/inlang/plugins/*'
   - 'packages/inlang/*/example'
   - 'packages/inlang/*/examples/*'
   - 'packages/*/example'
