--- a/packages/inlang/sdk/package.json
+++ b/packages/inlang/sdk/package.json
@@ -22,8 +22,8 @@
 		"build": "npm run env-variables && tsc --build",
 		"dev": "npm run env-variables && tsc --watch",
 		"env-variables": "node ./src/services/env-variables/createIndexFile.js",
-		"test": "npm run env-variables && tsc --noEmit && vitest run --passWithNoTests --coverage",
-		"test:watch": "npm run env-variables && vitest",
+		"test": "tsc --noEmit && vitest run",
+		"test:watch": "vitest",
 		"lint": "eslint ./src",
 		"format": "prettier ./src --write",
 		"clean": "rm -rf ./dist ./node_modules",
