--- a/packages/my-react-router-app/package.json
+++ b/packages/my-react-router-app/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "build": "tsc --build",
+    "dev": "vite"
+  },
+  "exports": {
+    ".": "./dist/index.js"
   },
   "dependencies": {
-    "@react-router/node": "^7.1.5",
-    "@react-router/serve": "^7.1.5",
     "isbot": "^5.1.17",
+    "jotai": "^2.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5"
