--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -16,6 +16,7 @@
     "@inlang/paraglide-js-example-next-js-ssg",
     "@inlang/paraglide-js-example-astro",
     "@inlang/paraglide-js-example-sveltekit",
+    "@inlang/paraglide-js-example-tanstack-router",
     "@inlang/plugin-icu1",
     "@inlang/server",
     "@inlang/template-plugin",
