--- a/inlang/packages/paraglide/paraglide-js/examples/tanstack-router/tsconfig.json
+++ b/inlang/packages/paraglide/paraglide-js/examples/tanstack-router/tsconfig.json
@@ -1,11 +1,14 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "skipLibCheck": true
-  }
+	"include": ["src"],
+	"compilerOptions": {
+		"strict": true,
+		"esModuleInterop": true,
+		"jsx": "react-jsx",
+		"target": "ESNext",
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
+		"skipLibCheck": true,
+		"allowJs": true,
+		"checkJs": true
+	}
 }
